# AoC_2025

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  util.py
Python/: Day1.ipynb
notebooks/: day01.ipynb  day02.ipynb  day03.ipynb  day04.ipynb  day05.ipynb  day06.ipynb  day07.ipynb  day08.ipynb  day08_v2.ipynb  day09.ipynb  day09_v2.ipynb  day09_v6.ipynb  day10.ipynb  day11.ipynb
src/aoc_utils/: __init__.py  algorithms.py  input.py  parsing.py
tests/: test_algorithms.py  test_input.py  test_parsing.py
utils/: __init__.py  input_reader.py
